--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -25,10 +25,10 @@ brew "sqlite"
 brew "vim"
 brew "yarn"
 brew "zsh"
-# cask "font-hasklig"
-# cask "google-chrome"
-# cask "iterm2"
-# cask "karabiner-elements"
-# cask "notion"
+cask "font-hasklig"
+cask "google-chrome"
+cask "iterm2"
+cask "karabiner-elements"
+cask "notion"
 cask "slack"
 cask "vlc"
