--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
-    "coc-json": ">=1.3.6",
+    "coc-json": ">=1.7.0",
     "coc-prettier": ">=1.1.23",
-    "coc-snippets": ">=2.4.6",
-    "coc-tsserver": ">=1.8.1"
-  }
+    "coc-prisma": ">=0.11.0",
+    "coc-snippets": ">=3.1.2",
+    "coc-tsserver": ">=1.12.0",
+    "@yaegassy/coc-tailwindcss3": ">=0.5.4"
+  },
+  "disabled": [],
+  "locked": [],
+  "lastUpdate": 1689356044228
 }
