--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal "screen-256color"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set-option -g mouse on
+set-option -g focus-events on
+set-option -sg escape-time 10
 
 # Smart pane switching with awareness of Vim splits.
 #:echo &t_Co See: https://github.com/christoomey/vim-tmux-navigator
