update brewfile w/ nvm & tmux, update path in zshrc

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -10,7 +10,9 @@ brew "python@3.9"
 brew "ruby"
 brew "typescript"
 brew "node"
+brew "nvm"
 brew "bat"
+brew "tmux"
 brew "fd"
 brew "fzf"
 brew "git"
