--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,8 +5,10 @@ tap "homebrew/core"
 tap "homebrew/services"
 brew "clojure"
 brew "elixir"
+brew "python"
 brew "python@3.10"
 brew "python@3.9"
+brew "uv"
 brew "ruby"
 brew "typescript"
 brew "node"
@@ -34,3 +36,5 @@ cask "karabiner-elements"
 cask "notion"
 cask "slack"
 cask "vlc"
+cask "raycast"
+cask "chatgpt"
